--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,5 +1,3 @@
 @import ./_variables.sass
-@import ./_font
-@import ../../node_modules/bootstrap/scss/bootstrap.scss
-@import ../../node_modules/bootstrap-icons/font/bootstrap-icons.css
+@import ./_font.sass
 @import ./_allmodules.sass
