--- a/src/sass/modules/_header.sass
+++ b/src/sass/modules/_header.sass
@@ -7,13 +7,14 @@ nav
     align-items: center
     background-color: #ffffff
     color: black
-    // position: fixed
+    position: fixed
     width: 100vw
     padding: 5vh 0
     z-index: 9999 
     opacity: 0.9
     .point
         color: red
+        font-size: xx-large
   
     .menu
        display: flex 
@@ -29,17 +30,19 @@ nav
 
     .leftside-menu
        display: flex
+       flex-direction: row
+       align-items: center
        justify-content: center
        align-content: center
         
     button
         border-radius: 20px 
-        background-color: orange
+        background-color: red
         border: none
         color: white
         padding: 1vh 3vw
         &:hover
-            background-color: #ed9511c1
+            background-color: red
      
     a
       text-decoration: none
@@ -82,21 +85,20 @@ button
     background-color: purple
     color: white
     cursor: pointer
-
-button:hover
-    background-color:rgb(186, 5, 186)
+    &:hover
+        background-color: pink
 
 
 .backdrop
-   display: none 
+    width: 100%
+    height: 100%
+    background-color: rgba(0, 0, 0, 0.24)
     position: fixed
-    z-index: 1
-    left: 0
-    top: 0
-    width: 100% 
-    height: 100% 
-    background-color: rgb(0,0,0) 
-    background-color: rgba(0,0,0,0.4) 
+    z-index: 9999
+    overflow: hidden
+    display: flex
+    justify-content: center
+    display: none
 
 
 .modal
