--- a/src/sass/modules/_main.sass
+++ b/src/sass/modules/_main.sass
@@ -1,5 +1,5 @@
 .restaurant-Home
-    height: 650px
+    // height: 650px
     display: flex
     justify-content: space-around
     align-content: center
@@ -103,18 +103,125 @@
             &:hover
                 background: red 
                 color: white
+.count
+    display: flex
+    flex-direction: row
+    justify-content: space-around
+    align-items: center
+    text-align: center
+    background-image: url(../images/stats-bg.jpg)
+    position: relative
+    background-size: 100% 100%
+    width: 100%
+    height: 55vh
+    &::before
+        content: ""
+        position: absolute
+        top: 0
+        width: 100%
+        height: 100%
+        background: rgba(0, 0, 0, 0.278)
+        
+    .number
+        color: white 
+.restaurant-menu 
+    text-align: center
+    padding: 20px
+    h1
+        font-family: cursive
+        text-align: center
+    span
+        color: red  
+.carousel
+    background-color: #f2f2f2
+    height: 50%
+    text-align: center
+    padding: 20px
+    h1
+        font-family: cursive
+        text-align: center
+    span
+        color: red
+   
+
+    .mySlides
+        display: none
+    img 
+        vertical-align: middle    
+    .slideshow-container 
+        max-width: 1000px
+        position: relative
+        margin: auto
+    .fade 
+        animation-name: fade
+        animation-duration: 1.5s
+
+    .dot 
+        height: 15px
+        width: 15px
+        margin: 0 2px
+        background-color: #bbb
+        border-radius: 50%
+        display: inline-block
+        transition: background-color 0.6s ease
+//     @keyframes fade 
+//         from {opacity: .4} 
+//         to {opacity: 1}
+
+
+// /* On smaller screens, decrease text size */
+// @media only screen and (max-width: 300px) {
+//   .text {font-size: 11px}
+// }
+.restaurant-chefs
+    text-align: center
+    padding: 20px
+    h1
+        font-family: cursive
+        text-align: center
+        padding: 20px
+    span
+        color: red 
+    .img
+        position: relative 
+        
+
+
+    .img1
+        position: absolute 
+        content: ""
+        left: -1px
+        right: (-2.5)px
+        top: 60px
+        bottom: -5px
+        height: 100%
+        filter: invert(100%)
+        padding: 20px
+    .chefs
+        z-index: 9999
+        padding-top: 50px 
+        width: 350px
+        text-align: center
+        padding: 10px
+    .chefs1
+        box-shadow: rgb(0,0 ,0.2 ) 
+        &:hover
+            transform: scale(1.1)
+             
 
 @media (max-width :428px)
     .restaurant-Home
         flex-direction: column-reverse
         width: 100%
-        padding-top: 120px 
+        
         img
             width: 90%
     .globale
+     
         flex-direction: column
         width: 100%
         img
+            margin-top: 120px 
             width: 100%
         .rightside-icons
             width: 100%
