--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20090,6 +20090,15 @@ nav .point {
   color: red;
   font-size: xx-large;
 }
+nav a {
+  text-decoration: none;
+  color: black;
+  text-align: center;
+}
+nav a:hover {
+  text-decoration: underline;
+  text-decoration-color: red;
+}
 nav .menu {
   display: flex;
   justify-content: space-between;
@@ -20111,23 +20120,27 @@ nav .leftside-menu {
   justify-content: center;
   align-content: center;
 }
-nav button {
-  border-radius: 20px;
-  background-color: red;
+nav .contact-btn {
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  gap: 5px;
+  padding-left: 50px;
+}
+nav .contact-btn button {
+  background: #ce1212;
+  padding: 6px 32px;
+  border-radius: 50px;
+  outline: none;
   border: none;
-  color: white;
-  padding: 1vh 3vw;
-}
-nav button:hover {
-  background-color: red;
-}
-nav a {
   text-decoration: none;
-  color: #8c8c8c;
+  color: white;
+  font-weight: 500;
+  font-size: 14px;
+  font-family: "Inter";
 }
-nav a:hover {
-  color: black;
-  text-decoration: underline;
+nav .contact-btn button:hover {
+  background-color: #fa3434;
 }
 
 @media (max-width: 428px) {
@@ -20157,68 +20170,69 @@ nav a:hover {
     display: flex;
   }
 }
-button {
-  padding: 2vh 4vw;
-  border: none;
-  border-radius: 20px;
-  background-color: purple;
-  color: white;
-  cursor: pointer;
-}
-button:hover {
-  background-color: pink;
-}
-
-.backdrop {
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.24);
-  position: fixed;
-  z-index: 9999;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  display: none;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.modal {
-  margin-top: 30%;
-  width: 35%;
-  height: 45%;
-  background: white;
-  margin-top: 5vh;
-  border-radius: 15px;
-}
-
-.modal-title {
-  padding: 0 2vw;
-  display: flex;
-  align-items: center;
-  height: 20%;
-  border-bottom: 1px solid black;
-}
-
-.modal-body {
-  height: 60%;
-  /* background-color: blueviolet */
-}
-
-.modal-footer {
-  /* background-color: blueviolet */
-  border-top: 1px solid black;
-  padding-inline: 2vw;
-  height: 20%;
-  display: flex;
-  align-items: center;
-  justify-content: end;
-}
-
-.close-modal {
-  background-color: rgb(194, 6, 6);
+.modal-content {
+  background-color: #fff;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 400px;
   border-radius: 10px;
-  padding: 0;
-  height: 70%;
-  width: 25%;
+  position: relative;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  position: absolute;
+  top: 5px;
+  right: 10px;
+}
+.close:hover, .close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-content form {
+  display: flex;
+  flex-direction: column;
+}
+.modal-content form label {
+  margin-bottom: 5px;
+}
+.modal-content form input {
+  margin-bottom: 15px;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+.modal-content form button {
+  padding: 10px;
+  background-color: #ff4d4d;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+.modal-content form button:hover {
+  background-color: #e23333;
 }
 
 .restaurant-Home {
@@ -20229,14 +20243,17 @@ button:hover {
   padding-top: 140px;
   background-color: #f2f2f2;
 }
-.restaurant-Home img {
-  vertical-align: 50px;
-  animation: mymove 5s infinite;
-}
-@keyframes mymove {
-  50% {
-    vertical-align: 100px;
+@keyframes up-down {
+  to {
+    transform: translateY(-35px);
   }
+}
+.restaurant-Home .animated {
+  box-sizing: border-box;
+  animation-name: up-down;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 .restaurant-Home h1, .restaurant-Home .h1 {
   font-family: cursive;
@@ -20263,6 +20280,7 @@ button:hover {
 }
 .restaurant-Home i {
   color: red;
+  font-size: x-large;
 }
 .restaurant-Home .liens {
   display: flex;
@@ -20336,17 +20354,19 @@ button:hover {
   align-content: center;
   text-align: center;
   gap: 10px;
-  padding: 10px;
+  padding: 30px;
+}
+.whychooseymmy .card:hover i {
+  background: red;
+  color: white;
 }
 .whychooseymmy .card i {
   text-align: center;
-  width: 10%;
+  font-size: xx-large;
   color: red;
   background-color: #ebddd8;
-}
-.whychooseymmy .card i:hover {
-  background: red;
-  color: white;
+  border-radius: 40%;
+  padding: 10px;
 }
 
 .count {
@@ -20370,57 +20390,346 @@ button:hover {
   background: rgba(0, 0, 0, 0.278);
 }
 .count .number {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   color: white;
+  z-index: 9999;
 }
 
 .restaurant-menu {
-  text-align: center;
-  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 5vh;
 }
-.restaurant-menu h1, .restaurant-menu .h1 {
+.restaurant-menu p {
+  color: rgba(0, 0, 0, 0.5607843137);
+  font-weight: bold;
+}
+.restaurant-menu h2, .restaurant-menu .h2 {
+  padding-bottom: 6vh;
+  color: #d11212;
+}
+.restaurant-menu .btnRest {
+  display: flex;
+  flex-direction: row;
+  gap: 3.5vw;
+  padding-bottom: 3vh;
+}
+.restaurant-menu .btnRest button {
+  border: none;
+  background-color: #fff;
+  font-size: 20px;
+  border-bottom: 2px solid rgba(117, 116, 116, 0.5333333333);
+  padding-bottom: 1vh;
+}
+.restaurant-menu .btnRest button:hover {
+  border-bottom-color: #d11212;
+}
+.restaurant-menu .content-rest {
+  text-align: center;
+  padding-top: 3vh;
+  color: #d11212;
+  padding-bottom: 4vh;
+}
+.restaurant-menu .content-plat {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 10vh;
+}
+.restaurant-menu .content-plat .plat-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  gap: 8vw;
+  padding-bottom: 1vh;
+}
+.restaurant-menu .content-plat p {
+  font-weight: normal;
+}
+.restaurant-menu .content-plat span {
+  font-weight: bold;
+  color: #d11212;
+  font-size: x-large;
+}
+
+.anim {
+  animation: rajae 0.9s;
+}
+@keyframes rajae {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.carousel-globale {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.carousel-container {
+  width: 100vw;
+  height: 80vh;
+  background: #f2f2f2;
+  position: relative;
+  overflow: hidden;
+}
+.carousel-container h1, .carousel-container .h1 {
   font-family: cursive;
   text-align: center;
 }
-.restaurant-menu span {
+.carousel-container span {
   color: red;
+}
+.carousel-container .titre {
+  text-align: center;
 }
 
 .carousel {
-  background-color: #f2f2f2;
-  height: 50%;
-  text-align: center;
+  display: flex;
+  transition: transform 0.5s ease;
+}
+
+.slide {
+  min-width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 4vw;
+}
+.slide .slide-left {
+  border-left: 2px solid red;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: star;
+  width: 50%;
 }
-.carousel h1, .carousel .h1 {
-  font-family: cursive;
-  text-align: center;
-}
-.carousel span {
+.slide .tiwtiwat {
   color: red;
 }
-.carousel .mySlides {
+.slide .star {
+  color: #ffc107;
+}
+
+.slide img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
+.next, .previous {
+  display: none;
+  padding: 1vh 2vw;
+  border-radius: 20px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.next {
+  right: 0px;
   display: none;
 }
-.carousel img {
-  vertical-align: middle;
+
+.previous {
+  left: 0;
+  display: none;
 }
-.carousel .slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+
+.indicators-grp {
+  width: 100%;
+  padding: 2vh 0;
+  position: absolute;
+  bottom: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
-.carousel .fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-.carousel .dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
+
+.indicator {
+  padding: 5px;
+  background: rgb(169, 22, 22);
   border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+}
+
+.activeIndicator {
+  background-color: black;
+}
+
+.carousel-globale1 .carousel-container {
+  width: 100vw;
+  height: 80vh;
+  background: #f2f2f2;
+  position: relative;
+  overflow: hidden;
+}
+.carousel-globale1 .carousel-container .slide {
+  min-width: 30%;
+  gap: 2vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+#img1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  background-image: url(../images/events-1.jpg);
+  position: relative;
+  background-size: 100% 100%;
+  width: 100%;
+  height: 55vh;
+}
+#img1::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.278);
+}
+
+#img2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  background-image: url(../images/events-2.jpg);
+  position: relative;
+  background-size: 100% 100%;
+  width: 100%;
+  height: 55vh;
+}
+#img2::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.278);
+}
+
+#img3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  background-image: url(../images/events-3.jpg);
+  position: relative;
+  background-size: 100% 100%;
+  width: 100%;
+  height: 55vh;
+}
+#img3::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.278);
+}
+
+#img4 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  background-image: url(../images/events-4.jpg);
+  position: relative;
+  background-size: 100% 100%;
+  width: 100%;
+  height: 55vh;
+}
+#img4::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.278);
+}
+
+.bookatable {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-top: 11vh;
+}
+.bookatable p {
+  text-align: center;
+}
+.bookatable h2 span, .bookatable .h2 span {
+  color: #ce1212;
+}
+.bookatable .table-row {
+  display: flex;
+  flex-direction: row;
+  padding: 0px;
+  margin-top: 4vh;
+}
+.bookatable .table-row .table-left img {
+  padding: 0px;
+}
+.bookatable .table-row .table-right {
+  background-color: #f8f8f8;
+  padding: 1vh 2vw;
+}
+.bookatable .table-row .table-right .form-group {
+  background-color: #f8f8f8;
+  padding: 12vh 1vw;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.bookatable .table-row .table-right .form-group .form-row {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+.bookatable .table-row .table-right .form-group .form-row textarea {
+  width: 100%;
+  height: 30vh;
+  padding: 1vh 1.5vw;
+}
+.bookatable .table-row .table-right .form-group .form-row input {
+  padding: 1vh 1.5vw;
+  width: 15vw;
+}
+.bookatable .table-row .table-right .bookBtn button {
+  border: none;
+  color: #fff;
+  padding: 2vh 5vw;
+  background-color: #ce2929;
+  border-radius: 5px;
+}
+.bookatable .table-row .table-right .bookBtn button:hover {
+  background-color: rgba(206, 41, 41, 0.8);
 }
 
 .restaurant-chefs {
@@ -20435,15 +20744,15 @@ button:hover {
 .restaurant-chefs span {
   color: red;
 }
-.restaurant-chefs .img {
+.restaurant-chefs .img-globale {
   position: relative;
 }
 .restaurant-chefs .img1 {
   position: absolute;
   content: "";
-  left: -1px;
-  right: -2.5 px;
-  top: 60px;
+  left: -1.5px;
+  right: -2 px;
+  top: 50px;
   bottom: -5px;
   height: 100%;
   filter: invert(100%);
@@ -20499,6 +20808,13 @@ button:hover {
   .whychooseymmy .card {
     width: 100%;
     margin-top: 10px;
+  }
+  .count {
+    flex-direction: column;
+  }
+  .chef-res {
+    display: flex;
+    flex-direction: column;
   }
 }
 .footer {
