--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,5 +1,5 @@
 @import ./_variables.sass
 @import ../../node_modules/bootstrap/scss/bootstrap.scss
-@import ../../node_modules/bootstrap-icons/font/bootstrap-icons.scss
+@import ../../node_modules/bootstrap-icons/font/bootstrap-icons
 @import ./_font.sass
 @import ./_allmodules.sass
