--- a/src/sass/modules/_header.sass
+++ b/src/sass/modules/_header.sass
@@ -15,7 +15,14 @@ nav
     .point
         color: red
         font-size: xx-large
-  
+    a
+        text-decoration: none
+        color: black
+        text-align: center
+        &:hover
+            text-decoration: underline
+            text-decoration-color: red
+        
     .menu
        display: flex 
        justify-content: space-between
@@ -35,21 +42,25 @@ nav
        justify-content: center
        align-content: center
         
-    button
-        border-radius: 20px 
-        background-color: red
-        border: none
-        color: white
-        padding: 1vh 3vw
-        &:hover
-            background-color: red
-     
-    a
-      text-decoration: none
-      color: #8c8c8c 
-      &:hover
-        color: black
-        text-decoration: underline
+    .contact-btn
+        display: flex
+        align-items: center
+        justify-self: center
+        gap: 5px
+        padding-left: 50px
+        button
+            background: #ce1212
+            padding: 6px 32px
+            border-radius: 50px
+            outline: none
+            border: none
+            text-decoration: none
+            color: white
+            font-weight: 500
+            font-size: 14px
+            font-family: "Inter"
+            &:hover
+                background-color: #fa3434
 @media (max-width :428px)
    nav
     .label
@@ -78,64 +89,63 @@ nav
     #Check:checked ~ .menu
         display: flex
     
-button 
-    padding: 2vh 4vw
-    border: none
-    border-radius: 20px
-    background-color: purple
-    color: white
-    cursor: pointer
-    &:hover
-        background-color: pink
-
-
-.backdrop
-    width: 100%
-    height: 100%
-    background-color: rgba(0, 0, 0, 0.24)
-    position: fixed
-    z-index: 9999
-    overflow: hidden
-    display: flex
-    justify-content: center
-    display: none
-
 
 .modal
-    margin-top: 30%
-    width: 35%
-    height: 45%
-    background: white
-    margin-top: 5vh
-    border-radius: 15px
+    display: none 
+    position: fixed 
+    z-index: 1000 
+    left: 0
+    top: 0
+    width: 100%
+    height: 100%
+    overflow: auto 
+    background-color: rgba(0,0,0,0.5) 
 
-
-.modal-title
-    padding: 0 2vw
-    display: flex
-    align-items: center
-    height: 20%
-    border-bottom: 1px solid black
-
-.modal-body
-    
-    height: 60%
-    /* background-color: blueviolet */
-
-
-.modal-footer
-    /* background-color: blueviolet */
-    border-top: 1px solid black
-    padding-inline: 2vw
-    height: 20%
-    display: flex
-    align-items: center
-    justify-content: end
-
-
-.close-modal
-    background-color: rgb(194, 6, 6)
+.modal-content
+    background-color: #fff
+    margin: 15% auto 
+    padding: 20px
+    border: 1px solid #888
+    width: 80%
+    max-width: 400px
     border-radius: 10px
-    padding:0
-    height: 70%
-    width: 25%
+    position: relative
+.close
+    color: #aaa
+    float: right
+    font-size: 28px
+    font-weight: bold
+    position: absolute
+    top: 5px
+    right: 10px
+    &:hover,
+    &:focus
+        color: #000
+        text-decoration: none
+        cursor: pointer
+
+.modal-content form
+    display: flex
+    flex-direction: column
+
+    label
+        margin-bottom: 5px
+
+    input
+        margin-bottom: 15px
+        padding: 10px
+        font-size: 16px
+        border: 1px solid #ddd
+        border-radius: 5px
+
+    button
+        padding: 10px
+        background-color: #ff4d4d
+        color: white
+        border: none
+        border-radius: 5px
+        cursor: pointer
+        font-size: 16px
+
+        &:hover
+            background-color: #e23333
