ajoter section galery

--- a/src/sass/modules/_main.sass
+++ b/src/sass/modules/_main.sass
@@ -1,4 +1,7 @@
-
+body
+    padding: 0
+    margin: 0
+    overflow-x: hidden
 .restaurant-Home
     // height: 650px
     display: flex
@@ -156,7 +159,7 @@
         font-weight: bold
     h2
         padding-bottom: 6vh
-        span
+    span
         color: #d11212
     .btnRest
         display: flex
@@ -175,8 +178,8 @@
         text-align: center
         padding-top: 3vh
         h3
-        color: #d11212
-        padding-bottom: 4vh
+            color: #d11212
+            padding-bottom: 4vh
     .content-plat
         display: flex
         flex-direction: column
@@ -289,20 +292,65 @@
     background-color: black
 
 .carousel-globale1
-    .carousel-container 
-        width: 100vw
-        height: 80vh
-        background: #f2f2f2
-        position: relative
-        overflow: hidden
-        .slide
-            min-width: 30%
-            gap: 2vw
-            display: flex
-            flex-direction: row
-            align-items: center
-            justify-content: center
-#img1 
+   .slide-container 
+    margin-top: 30px
+    margin-bottom: 30px
+    width: 100%
+    display: flex
+    flex-direction: row
+    // justify-content: center
+    // align-items: center
+    gap: 1vw
+    overflow: hidden
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-around
+
+
+.image-slideshow 
+    width: 100%
+    position: relative
+    margin: auto
+    // display: flex
+    // flex-direction: row
+    // flex-wrap: wrap
+    // justify-content: space-around
+
+    
+    
+    
+
+
+.image-slideshow img 
+    width: 30%
+
+
+.fade 
+    animation-name: fade
+    animation-duration: 5s
+
+
+@keyframes fade 
+    from 
+        opacity: .5
+    
+
+    to 
+        opacity: 1
+    
+
+
+
+.indicators 
+    display: flex
+
+
+.indicators>div 
+    cursor: pointer
+    margin: 5px
+
+       
+.img12 
     display: flex
     flex-direction: column
     justify-content: space-around
@@ -311,8 +359,9 @@
     background-image: url(../images/events-1.jpg)
     position: relative
     background-size: 100% 100%
-    width: 100%
-    height: 55vh
+    width: 30%
+    height: 80vh
+    color: white
     &::before
         content: ""
         position: absolute
@@ -320,17 +369,18 @@
         width: 100%
         height: 100%
         background: rgba(0, 0, 0, 0.278)
-#img2 
+.img2 
     display: flex
-    flex-direction: row
+    flex-direction: column
     justify-content: space-around
     align-items: center
     text-align: center
     background-image: url(../images/events-2.jpg)
     position: relative
     background-size: 100% 100%
-    width: 100%
-    height: 55vh
+    width: 30%
+    height: 80vh
+    color: white
     &::before
         content: ""
         position: absolute
@@ -338,17 +388,18 @@
         width: 100%
         height: 100%
         background: rgba(0, 0, 0, 0.278)
-#img3 
+.img3 
     display: flex
-    flex-direction: row
+    flex-direction: column
     justify-content: space-around
     align-items: center
     text-align: center
     background-image: url(../images/events-3.jpg)
     position: relative
     background-size: 100% 100%
-    width: 100%
-    height: 55vh
+    width: 33%
+    height: 80vh
+    color: white
     &::before
         content: ""
         position: absolute
@@ -356,17 +407,18 @@
         width: 100%
         height: 100%
         background: rgba(0, 0, 0, 0.278)
-#img4
+.img4
     display: flex
-    flex-direction: row
+    flex-direction: column
     justify-content: space-around
     align-items: center
     text-align: center
     background-image: url(../images/events-4.jpg)
     position: relative
     background-size: 100% 100%
-    width: 100%
-    height: 55vh
+    width: 33%
+    height: 80vh
+    color: white
     &::before
         content: ""
         position: absolute
@@ -429,7 +481,123 @@
                     background-color: #ce2929
                     border-radius: 5px
                     &:hover
-                        background-color: #ce2929cc       
+                        background-color: #ce2929cc  
+.restaurant-gallery
+    width: 80vw
+    display: flex
+    flex-direction: row
+    align-items: center
+.gallery-container
+    display: flex
+    align-items: center
+    padding: 30vh 0
+    max-width: 100px
+    position: relative
+.gallery-item
+    height: 200px
+    opacity: 1
+    position: absolute
+    transition: all 0.4s ease in-out
+    width: 300px
+    // z-index: 1
+    border-radius: 10px
+    background-size: contain
+.gallery-item-1
+    left: 15vw
+    opacity: 0.9
+    transform: translateX(-50%)
+.gallery-item-2 , .gallery-item-4
+    height: 250px
+    opacity: 0.9
+    width: 360px
+    z-index: 1
+.gallery-item-2
+    left: 30vw
+    transform: translateX(-50%)
+.gallery-item-3
+    box-shadow: -2px 5px 33px 6px rgba(0,0 ,0 ,0.35 )
+    height: 300px
+    opacity: 1
+    left: 50vw
+    transform: translateX(-50%)
+    width: 400px
+    z-index: 2
+.gallery-item-4
+    left: 70vw
+    transform: translateX(-50%)
+.gallery-item-5
+    left: 85vw
+    opacity: 0.9
+    transform: translateX(-50%)
+.gallery-controls
+    display: flex
+    justify-content: center
+    margin: 25px 0
+    height: 100px
+    button
+        background-color: transparent
+        border: 0
+        cursor: pointer
+        font-size: 30px
+        margin: 0 50px
+        padding: 0 12px
+        text-transform: capitalize
+.gallery-controls-button
+    &:focus
+        outline: none
+.gallery-controls-previous
+    position: relative
+    &::before
+        border: solid #000
+        border-width: 0 5px 5px 0
+        content: ''
+        display: inline-block
+        height: 5px
+        left: -30vw
+        padding: 10px
+        position: absolute
+        top: 25vw
+        transform: rotate(135deg) translateY(-50%)
+        transition: left 0.30s ease in-out
+        width: 5px
+    &:hover::before
+        left: -40vw
+.gallery-controls-next
+    position: relative
+    &::before
+        border: solid #000
+        border-width: 0px 5px 5px 0px
+        content: ''
+        display: inline-block
+        height: 5px
+        right: -30vw
+        padding: 10px
+        position: absolute
+        top: 45vw
+        transform: rotate(-45deg) translateY(-50%)
+        transition: right 0.30s ease in-out
+        width: 5px
+    &:hover::before
+        right: -40vw
+.gallery-nav
+    display: flex
+    justify-content: center
+    list-style: none
+    padding: 0
+    position: absolute
+    bottom: -30px 
+    width: 100%
+.gallery-nav
+    li
+    background-color: #ccc
+    border-radius: 50%
+    height: 10px
+    margin: 0 5px
+    width: 10px
+    cursor: pointer
+    transition: background-color 0.3s ease
+    &:active
+        background-color: #555                             
 
 .restaurant-chefs
     text-align: center
